# cashflow-challenge-Gabriel

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  INSTALL.md  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  start.bat  start.ps1  start.sh
.github/workflows/: ci.yml
deploy/: Caddyfile
docs/: ai-evolutions.md  architecture.md  cloud-deployment.md  compliance-checklist.md  costs.md  development-session-2026-05-20.md  domains.md  observability-tutorial.md  observability.md  offline-mode.md  overload-tests.md  production-readiness.md  requirements.md  scalability.md  security.md  transition-architecture.md  user-guide.md  verification.md
docs/adr/: adr-001-modular-architecture.md  adr-002-rabbitmq.md  adr-003-postgresql.md  adr-004-idempotency.md  adr-005-outbox-and-atomic-upsert.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.test.tsx  App.tsx  main.tsx  offlineQueue.ts  pwa.test.ts  pwa.ts  styles.css
scripts/: bootstrap-cloud.sh  deploy-vps.sh  provision-ubuntu-docker.sh
src/: __init__.py
src/app/: config.py  main.py  metrics.py  observability.py
src/consolidation/: __init__.py  models.py  repository.py  routes.py  service.py  worker.py
src/database/: __init__.py  connection.py  migrate.py
src/messaging/: __init__.py  consumer.py  models.py  outbox.py  outbox_dispatcher.py  publisher.py
src/transactions/: __init__.py  models.py  repository.py  (+3 more)
(+21 files in other folders)
